--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "java.project.sourcePaths": ["0901", "0830", "0829", "0903/src"]
+  "java.project.sourcePaths": ["0903/src", "0901", "0830", "0829", "0904/src"]
 }
