--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "java.project.sourcePaths": ["0903/src", "0901", "0830", "0829", "0904/src"]
+  "java.project.sourcePaths": [
+    "0904/src",
+    "0903/src",
+    "0901",
+    "0830",
+    "0829",
+    "0905/src"
+  ]
 }
