--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,11 @@
 {
   "java.project.sourcePaths": [
+    "0905/src",
     "0904/src",
     "0903/src",
     "0901",
     "0830",
     "0829",
-    "0905/src"
+    "0910/src"
   ]
 }
