--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,12 @@
 {
   "java.project.sourcePaths": [
+    "0910/src",
     "0905/src",
     "0904/src",
     "0903/src",
     "0901",
     "0830",
     "0829",
-    "0910/src"
+    "0911/src"
   ]
 }
