--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-  "java.project.sourcePaths": [
-    "0915/src",
-    "0911/src",
-    "0916/src"
-  ]
+  "java.project.sourcePaths": ["0911/src", "0915/src"]
 }
